--- a/src/styles.css
+++ b/src/styles.css
@@ -4,26 +4,21 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 /* */
-
 body {
   background: #9198e5;    /* COMMMMMM : check why linear gradient not working */
   color:black
   /* COMMMM: insert font */
 }
-
 header {
   font-size: 1.5rem;
 }
-
 header, .form {
   min-height: 010vh; 
   display: flex;
   justify-content: center;
   align-content: center;
 }
-
 .form input, .form button {
   min-height: 10vh;
   padding: 0.5rem;
@@ -31,16 +26,19 @@ header, .form {
   border: none ;
   background: white;
 }
-
 .form button {
   color: black ;
   background:white;
   cursor: pointer; 
   transition: all 0.3sec ease;
-
 }
-
 .form button:hover{
   background: grey;
   color: white;
 } 
+.container {
+  background-color: blanchedalmond;
+  display: flex;
+  margin:4vw;
+  height: 70vh;
+}
